adiciona títulos e parágrafo

--- a/index.html
+++ b/index.html
@@ -1,11 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>DCC202 - Atividade 09: Juliana Lindebeck</title>
+  </head>
+  <body>
+    <main>
+      <h1>DCC202 - Atividade 09: Juliana Lindebeck</h1>
+      <p>
+        Esta é a página principal tem código JavaScript nela. Você só verá o
+        resultado no console e durante a depuração.
+      </p>
+    </main>
+  </body>
 </html>
